After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 617862 - Fail to compile with system ifaddrs after OpenSolaris b137
Fail to compile with system ifaddrs after OpenSolaris b137
Status: RESOLVED FIXED
Product: vinagre
Classification: Applications
Component: VNC
git master
Other opensolaris
: Normal critical
: ---
Assigned To: vinagre-maint
vinagre-maint
Depends on:
Blocks:
 
 
Reported: 2010-05-06 07:51 UTC by Halton Huo
Modified: 2010-06-07 13:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make code is compatible with diffrent ifaddrs strcucture (2.35 KB, patch)
2010-05-06 08:24 UTC, Halton Huo
committed Details | Review

Description Halton Huo 2010-05-06 07:51:37 UTC
This bug is very similar with the vino bug #617848.

After http://bugs.opensolaris.org/bugdatabase/view_bug.do?bug_id=6731945 is
fixed into OpenSolaris b137, the vino code use the system ifaddrs API instead.
But it fails to compile:

 /opt/SunStudioExpress/bin/cc -DHAVE_CONFIG_H -I. -I../.. -I../.. -D_REENTRANT -D_POSIX_PTHREAD_SEMANTICS -D_PTHREADS -I/usr/include/gtk-vnc-1.0 -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/libxml2 -g -c vinagre-vnc-listener-dialog.c  -KPIC -DPIC -o .libs/vinagre-vnc-listener-dialog.o
"../../vinagre/vinagre-utils.h", line 33: warning: enumerator value overflows INT_MAX (2147483647)
"vinagre-vnc-listener-dialog.c", line 72: improper member use: sa_family
cc: acomp failed for vinagre-vnc-listener-dialog.c
Comment 1 Halton Huo 2010-05-06 08:24:17 UTC
Created attachment 160406 [details] [review]
Make code is compatible with diffrent ifaddrs strcucture

The fix idea is same as vino's bug #617848, which is described in https://bugzilla.gnome.org/show_bug.cgi?id=617848#c1.

This patch is tested under OpenSolaris b128 and Ubuntu 10.04. Please review.
Comment 2 Jonh Wendell 2010-06-07 13:33:05 UTC
Thanks, Halton. Pushed your patch to the master branch.

Next time use git format-patch ;)